move .env to /server remove google keys

--- a/server/.env
+++ b/server/.env
@@ -6,8 +6,8 @@ ENDPOINT_REMOVE_USER=/api/removeUser
 ENDPOINT_GET_USERS=/api/users
 ENDPOINT_GET_RESTAURANT_BY_USER_ID=/api/getRestaurantByUserId
 ENPOINT_ADD_ORDER=/api/addOrder
-GOOGLE_CLIENT_ID=187762675179-e9chc83tci2259889t9f64ftrncbk916.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=wrxpBMdN5FxwmCqVMR9ZnmoO
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 ENDPOINT_CHECK_IF_USER_IS_LOGGED_IN=/api/checkIfUserIsLoggedIn
 ENDPOINT_GET_USER_ORDERS=/api/getUserOrders
 ENDPOINT_GET_RESTAURANT_ORDERS=/api/getRestaurantOrders
